# grpc-test

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindGRPC.cmake  GenerateProto.cmake
include/: WorkspaceServiceImpl.cpp  WorkspaceServiceImpl.h
proto/: workspace.grpc.pb.cc  workspace.grpc.pb.h  workspace.pb.cc  workspace.pb.h  workspace.proto
proto_libs/: helloworld.pb.cc  workspace.pb.cc  workspace.pb.h
src/: CMakeLists.txt  main.cpp
